# SIGNATE_PC

./: README.md  main.py  preprocess.py  pyproject.toml  visualize.py
conf/: main.yaml
conf/data/: base.yaml
conf/exp/: optuna.yaml  simple.yaml
conf/model/: catlr.yaml  logistic.yaml  xgblgbm.yaml  xgblgbmcat.yaml
conf/model/params/: catboost.yaml  catlr.yaml  logistic.yaml  xgblgbm.yaml  xgblgbmcat.yaml
dataset/: dataset.py  utils.py
experiment/: experiment.py  optuna.py  utils.py
model/: __init__.py  base_model.py  get_model.py  model.py  utils.py
model/ensemble/: __init__.py  ensemble.py
