[project]
name = "signate-pc"
version = "0.1.0"
description = ""
authors = [
    {name = "Kusukawa Naoya",email = "kusukawa93@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy (>=2.2.1,<3.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "xgboost (>=2.1.3,<3.0.0)",
    "lightgbm (>=4.5.0,<5.0.0)",
    "scikit-learn (>=1.6.0,<2.0.0)",
    "optuna (>=4.1.0,<5.0.0)",
    "matplotlib (>=3.10.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
